@@ -2,11 +2,11 @@ package ece651.riskgame.client.controllers;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
+import ece651.riskgame.shared.BasicUnit;
 import ece651.riskgame.shared.Territory;
 import ece651.riskgame.shared.Unit;
 import javafx.fxml.FXML;
@@ -22,6 +22,8 @@ public class PlacementPaneController {
   
   GameController gameController;
 
+  List<Unit> totalUnit;
+  
   /**
    * Set labels(territory names) for
    */
@@ -35,7 +37,7 @@ public class PlacementPaneController {
     }
     Label title = ((Label) pane.lookup("#title"));
     List<Unit> units = gameController.gameIO.recvUnitsToPlace();
-    title.setText("Place your " + units.get(0).getNum() + " units");
+    title.setText("Place your " + totalUnit + " units");
   }
 
   
@@ -45,13 +47,17 @@ public class PlacementPaneController {
     try {
       gameController.updateHint("Submitted! Waiting for other players");
       // call guiplayer
-      Map<String, Integer> placements = new ArrayList<Integer>(Arrays.asList(1, 2, 3)).stream().collect(
-          Collectors.toMap(i -> ((Label) pane.lookup("#label" + i)).getText(),
-                           i -> Integer.parseInt(((TextField) pane.lookup("#field"+i)).getText())));            
+      Map<String, List<Unit>> placements = new HashMap();
+      for (int i = 1; i <= 3; i++) {
+        String territory = ((Label) pane.lookup("#label" + i)).getText();
+        int num = Integer.parseInt(((TextField) pane.lookup("#field"+i)).getText());
+        Unit unit = new BasicUnit(num, 1);
+        placements.put(territory, List.of(unit));
+      }
       // TODO: The wait needs Task.setOnSucceded, learn later
-      String result = gameController.guiPlayer.tryPlace(placements);
+      String result = gameController.guiPlayer.tryPlace(placements, totalUnit);
       if (result == null) {
-        gameController.gameIO.sendPlacements(gameController.guiPlayer.adaptPlacements(placements));
+        gameController.gameIO.sendPlacements(placements);
         // update map
         gameController.guiPlayer.updateGame(gameController.gameIO.recvGame());        
         gameController.updateHint("Welcome to game world! Let's crush enemies!");
@@ -65,7 +71,7 @@ public class PlacementPaneController {
     } catch (NumberFormatException e) {
       gameController.updateHint("Please type number to place");
     } catch (IllegalArgumentException e) {
-      gameController.updateHint(e.getMessage());
+      gameController.updateHint("Type non-negative number only");
     }
   }
 
